tests/functional/lang/eval-fail-div-1.err.exp
error:
       … while calling the 'div' builtin
         at /pwd/lang/eval-fail-div-1.nix:1:1:
            1| builtins.div "foo" 1
             | ^
            2|

       … while evaluating the first operand of the division

       error: expected an integer but found a string: "foo"
